--- a/nest/templates/shop/shop.html
+++ b/nest/templates/shop/shop.html
@@ -79,7 +79,7 @@
                                         <span class="old-price">₹{{product.p_mrp}}</span>
                                     </div>
                                     <div class="add-cart">
-                                        <a class="add" href="shop-cart.html"><i class="fi-rs-shopping-cart mr-5"></i>Add </a>
+                                        <a class="add" href="/cart/{{product.p_slug}}/"><i class="fi-rs-shopping-cart mr-5"></i>Add </a>
                                     </div>
                                 </div>
                             </div>
